  29 May 2017; Horea Christian <h.chr@mail.ru> samri-9999.ebuild:
  sci-biology/samri: fixed stale header

  29 May 2017; Horea Christian <h.chr@mail.ru> metadata.xml, samri-9999.ebuild:
  sci-biology/samri: updated metadata

  21 Sep 2016;  <chymera@gentoo.org> SAMRI-9999.ebuild:
  sci-biology/SAMRI: updated python compatibility

  06 Sep 2016; Horea Christian <h.chr@mail.ru> SAMRI-9999.ebuild:
  sci-biology/SAMRI: added dep

  30 Aug 2016; Horea Christian <h.chr@mail.ru> SAMRI-9999.ebuild:
  sci-biology/SAMRI: added dep

  30 Aug 2016; Horea Christian <h.chr@mail.ru> SAMRI-9999.ebuild:
  sci-biology/SAMRI: added dep

*SAMRI-9999 (30 Aug 2016)

  30 Aug 2016; Horea Christian <h.chr@mail.ru> +SAMRI-9999.ebuild,
  +metadata.xml:
  sci-biology/SAMRI: updated chyMRI name