@@ -1,3 +1,6 @@
+  10 Aug 2017; Horea Christian <h.chr@mail.ru> samri-9999.ebuild:
+  sci-biology/samri:
+
   29 May 2017; Horea Christian <h.chr@mail.ru> samri-9999.ebuild:
   sci-biology/samri: fixed stale header
 
